--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1142,30 +1142,7 @@
 
 <dt>Box 29 - Employment codes</dt>
 <dd><p>Enter an "X" or a check mark under CPP/QPP if you are using <a href="#bx_29">box 29</a> with the employment code:</p>
-<ul>
-	<li>11 - Placement or employment agency worker</li>
-	<li>12 - Taxi drivers and drivers of other passenger-carrying vehicles, including workers who are registered, or entitled to be registered under the Indian Act <span class="wb-inv">Keywords: Indians indigenous first nations</span></li>
-	<li>13 - Barber or hairdresser, including workers who are registered, or entitled to be registered under the Indian Act</li>
-	<li>16 - Detached employee – Social security agreement</li>
-	<li>17 - Self-employed fishing income, including workers who are registered, or entitled to be registered under the Indian Act</li>
-		
-</ul>
-</dd>
-
-
-<dt>Add title</dt>
-<dd>Add situation</dd>
-</dl>   
-
-            </details>
-</li>
-	
-	
-		<li class="code-num">
-   <details>
-            <summary id="bx_29">Box 29&nbsp;– Employment code</summary>
-            <p>Enter the appropriate employment code in box 29 if one of the following situations applies. Otherwise, leave it blank.</p>
-            <ul>
+   <ul>
             <li>11 - Placement or employment agency worker </li>
             <li>12 - Taxi drivers or drivers of other passenger-carrying vehicles, including workers who are registered, or entitled to be registered under the Indian Act<span class="wb-inv">Keywords: Indians indigenous first nations</span></li>
             <li>13 - Barbers or hairdressers, including workers who are registered, or entitled to be registered under the Indian Act<span class="wb-inv">Keywords: Indians indigenous first nations</span></li>
@@ -1174,13 +1151,121 @@
             <li>16 - Detached employee &ndash; Social security agreement</li>
             <li>17 - Self-employed fishing income, including workers who are registered, or entitled to be registered under the Indian Act<span class="wb-inv">Keywords: Indians indigenous first nations</span></li>
             </ul>
- <h4>Specific situations</h4>
-<dl class="dl-horizontal">
+</dd></dl>
+            </details>
+</li>
+	
+	
+		<li class="code-num">
+   <details>
+            <summary id="bx_29">Box 29&nbsp;– Employment code</summary>
+            <p>Enter the appropriate employment code in box 29 if one of the following situations applies. Otherwise, leave it blank.</p>
 
-<dt>Province of employment outside Canada - Detached employee</dt>
-<dd></dd>
-</dl>
+  <details><summary>11 - Placement or employment agency workers</summary>
+            <div id="ajax-agency1">
+            <p id="agency">If you are a placement or employment agency (or a client of an agency) that pays a worker employment income:</p>
+            <ul>
+            <li>If you are the agency that hired the employee (even if they are located at a client's premises), <strong>you are required to report </strong>their income and deductions on a T4 slip </li>
+            <li>If you are an agency that placed the worker (who is <strong>not </strong>your employee) in employment under the direction and control of your client and you pay the worker, <strong>you are required to report </strong>their income and deductions on a T4 slip </li>
+            <li>If you are an agency that placed the worker (who is <strong>not </strong>your employee) in employment under the direction and control of your client and your client pays the worker, <strong>the client is required </strong>to report their income and deductions on a T4 slip </li>
+            </ul>
+            <p><strong>Do not </strong>fill out a T4 slip for the worker if you are a placement or employment agency (or a client of an agency) that pays a worker <strong>self-employed </strong>income. </p>
+            <p>If you are the agency, you may have to file a T4A slip, learn more: <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a> </p>
+	    </div></details>
 
+
+      <details><summary>12 - Self-employed taxi drivers and drivers of other passenger-carrying vehicles</summary>
+               <div id="ajax-self1">
+                  <p id="self">If the worker is <strong>self-employed</strong>:</p>
+                  <ul>
+                     <li>they are responsible for their own CPP and income tax </li>
+                     <li>you have to pay both the worker's share and your share of EI premiums, learn more: <a href="/cra-arc/payroll/calculate/situation/index.html">Determine if a special situation is taxable, pensionable or insurable</a> </li>
+                     <li>you have to file a T4 slip to show EI and PPIP premiums remitted on their behalf </li>
+                  </ul>
+ </div></details>
+
+ <details><summary>13 - Self-employed barbers and hairdressers</summary>
+               <div id="ajax-self2">
+                  <p id="self2">If the worker is <strong>self-employed</strong>:</p>
+                  <ul>
+                     <li>they are responsible for their own CPP and income tax </li>
+                     <li>you have to pay both the worker's share and your share of EI premiums, learn more: <a href="/cra-arc/payroll/calculate/situation/index.html">Determine if a special situation is taxable, pensionable or insurable</a> </li>
+                     <li>you have to file a T4 slip to show EI and PPIP premiums remitted on their behalf </li>
+                  </ul>
+ </div></details>
+
+   <details> <summary>14 -  Withdrawal from a prescribed salary deferral arrangement plan</summary>
+            <div id="ajax-defer1">
+            <p id="defer">A salary deferral arrangement is a plan or arrangement made between an employee and an employer. Under such an arrangement, an employee postpones receiving salary and wages to a later year. Treat the deferred salary and wages as employment income in the year the employee <strong>earns </strong>the amount. Report it on the employee's T4 slip for that year.</p>
+            <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/index.html">Prescribed salary deferral plans or arrangements</a></p>
+            <h4 id="h_prescribed">Prescribed plans or arrangements</h4>
+            <p>Prescribed plans or arrangements are not covered by the above salary deferral rules. Treat the deferred amounts in these cases as income in the year the employee <strong>receives </strong>them. Report the income on the employee's T4 slip for that year.</p>
+
+</div></details>
+
+
+    <details><summary>15 - Seasonal Agricultural Workers Program</summary>
+            <div id="ajax-agri1">
+            
+             <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4004/seasonal-agricultural-workers-program.html#P185_18674">Guide RC4004, Seasonal Agricultural Workers Program</a></p>
+            </div>
+            </details>
+
+
+  <details> <summary>16 - Detached employee – Social security agreement</summary>
+            <div id="ajax-outside1">
+            <p>In situations where you pay CPP on behalf of your employee who is working outside Canada, for all or part of the year, you have to prepare a T4 slip.</p>
+            <p>See box 10 and box 29 for specific instructions.</p>
+            <h4 id="h_0_1">Detached employees</h4>
+            <p>When CPP is paid by the employer on behalf of <strong>detached employees </strong>under employment code 16, leave box 14 blank if no other type of income is reported. Fill in boxes 16 and 26 with the appropriate amounts and leave boxes 18 and 24 blank.</p>
+            </div>
+            </details>
+
+     <details><summary>17 - Self-employed fishing income</summary>
+               <div id="ajax-fish1">
+                  <p id="fish">Fishing income is reported on a T4 slip. If you paid:</p>
+                  <ul>
+                     <li>the worker both self-employed and employment income, and are reporting both on the same T4 slip, use the regular instructions for the portion that is employment income. </li>
+                     <li>tax-exempt fishing income to a self-employed Indian, see <a href="#indian1">Indians employees</a>. </li>
+                  </ul>
+                  <p>If the worker is <strong>self-employed</strong>:</p>
+                  <ul>
+                     <li>they are responsible for their own CPP and income tax </li>
+                     <li>you have to pay both the worker's share and your share of EI premiums, learn more: <a href="/cra-arc/payroll/calculate/situation/index.html">Determine if a special situation is taxable, pensionable or insurable</a> </li>
+                     <li>you have to file a T4 slip to show EI and PPIP premiums remitted on their behalf </li>
+                  </ul>
+                  <p>Fishing income (for example, proceeds of the catch paid to a self-employed fisher) and employment income (for example, plant income) can be reported on the same T4 slip or on separate T4 slips. </p>
+                  <h4>Cash and accrual methods of accounting</h4>
+                  <p>Whether you report self-employed fisher income that is payable or paid depends on whether you are using the cash method or accrual method of accounting. </p>
+                  <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/farmers-fishers/reporting-income-loss-farmers-fishers.html">Reporting income and loss &ndash; farmers and fishers</a></p>
+
+</div></details>
+
+<details><summary>12, 13 or 17 - Indians who are self-employed</summary>
+            <div id="ajax-indian22">
+            <p id="indian2">We recognize that many First Nations people in Canada prefer not to describe themselves as Indians. However, we use the term Indian because it has a legal meaning in the Indian Act.</p>
+            <p>Payments you made to an Indian who is not your employee may be taxable, tax-exempt, or partly tax-exempt.</p>
+            <ul>
+            <li id="h_2_1"><strong>Taxable or partly tax-exempt self-employment income</strong>
+            <p>If you pay taxable income to a self-employed Indian who works as a:</p>
+            <ul>
+            <li>barber or hairdresser, taxi driver or driver of other passenger-carrying vehicles, see <a href="#self">Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</a> </li>
+            <li>fisher, see <a href="#fish">Self-employed fishing income</a> </li>
+            </ul>
+            </li>
+            <li id="h_2_2"><strong>Tax-exempt self-employment income</strong>
+            <p>If you pay tax-exempt income to a self-employed Indian worker who is a fisher, barber or hairdresser, a taxi driver or driver of other passenger-carrying vehicles:</p>
+            <ul>
+            <li>you do not have to deduct CPP/QPP contributions </li>
+            <li>you have to pay EI premiums (and PPIP premiums for fishers/workers in Quebec) </li>
+            </ul>
+            <p>Learn more: <a href="/cra-arc/payroll/calculate/situation/index.html">Determine if a special situation is taxable, pensionable or insurable</a></p>
+            </li>
+            </ul>
+ </div></details>
+
+        
+ 
             </details>
 		 </li>
 		<li class="code-num">
