--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1158,8 +1158,8 @@
 	
 		<li class="code-num">
    <details>
-            <summary id="bx_29">Box 29&nbsp;– Employment code</summary>
-            <p>Enter the appropriate employment code in box 29 if one of the following situations applies. Otherwise, leave it blank.</p>
+            <summary>Box 29&nbsp;– Employment code</summary>
+            <p id="bx_29">Enter the appropriate employment code in box 29 if one of the following situations applies. Otherwise, leave it blank.</p>
 
   <details><summary>11 - Placement or employment agency workers</summary>
             <div id="ajax-agency1">
