--- a/payroll/file/distribute.html
+++ b/payroll/file/distribute.html
@@ -162,6 +162,9 @@ You <strong>must </strong>provide your employees or recipients with their slips 
 <div class="col-xs-12">
 <dl class="dl-horizontal">
 <dt> <a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-5.html#h-584108">ITR: 209</a></dt> <dd> Distribution of taxpayers portions of returns</dd>
+<dt> <a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-5.html#h-584147:~:text=Distribution%20of%20Taxpayers%20Portions%20of%20Returns">ITR: 209(2)</a></dt> <dd> Taxpayers’ portions of returns – Mail or deliver in person</dd>
+<dt> <a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-5.html#h-584147:~:text=Distribution%20of%20Taxpayers%20Portions%20of%20Returns">ITR: 209(3)</a></dt> <dd> Taxpayers’ portions of returns – Send in electronic format with express consent</dd>
+<dt> <a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-5.html#h-584147:~:text=Distribution%20of%20Taxpayers%20Portions%20of%20Returns">ITR: 209(4)</a></dt> <dd> Meaning of express consent</dd>
 <dt> <a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-5.html#h-584108">ITR: 209(5)</a></dt> <dd> Distribution of taxpayers portions of returns</dd>
 <dt><a href="https://laws.justice.gc.ca/eng/regulations/C.R.C.%2C_c._385/page-3.html#docCont">CPP Reg: 13(1)</a></dt> <dd> Distribution of employee's portions of returns </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/SOR-97-33/page-2.html#docCont">IECPR: 14(1)</a></dt> <dd> Distribution of insured person's portions of returns </dd>
