--- a/payroll/calculate/benefit/loans.html
+++ b/payroll/calculate/benefit/loans.html
@@ -450,7 +450,7 @@
 
 <h4>Situations</h4>
 <details><summary>Calculate: <strong>Interest benefit</strong> for <strong>employees</strong></summary>
-<p id="h_3_1">Once you have determined the benefit is <a href="#emp" aria-controls="centred-popup" class="wb-lbx" role="button">considered received because of employment&nbsp;<span class="far fa-question-circle"></span></a>, the <strong>interest</strong> benefit is calculated <strong>in the tax year</strong> as follows:</p>
+<p id="h_3_1">Once you have determined that the benefit is <a href="#emp" aria-controls="centred-popup" class="wb-lbx" role="button">considered received because of employment&nbsp;<span class="far fa-question-circle"></span></a>, the <strong>interest</strong> benefit is calculated <strong>in the tax year</strong> as follows:</p>
 	
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
 
@@ -881,7 +881,7 @@
 
 <details><summary>Calculate: <strong>Forgiven loans or debt</strong></summary>
 <p id="h_3_3">Once you have determined the benefit is <a href="#forg" aria-controls="centred-popup" class="wb-lbx" role="button">forgiven loan or debt&nbsp;<span class="far fa-question-circle"></span></a>, the <strong>amount forgiven </strong>must be included on slip in the <strong>tax year </strong>in which the amount is forgiven.</p>
-<p><span class="fas fa-arrow-up text-success fa-lg"></span> An <strong>interest</strong> benefit must also be calculated for any part of the loan not forgiven in the tax year, continue to <a href="#h_3_1">Calculate - Interest benefit for employees</a>.</p>
+<p><span class="fas fa-arrow-up text-success fa-lg"></span> An <strong>interest</strong> benefit must also be calculated for any part of the loan not forgiven in the tax year, continue to <a href="#h_3_1">Calculate - Interest benefit for employees</a> or <a href="#h_3_2">Calculate - Interest benefit for shareholders</a>.</p>
 </details>
 
 
