--- a/subway/lines/adoption/2.html
+++ b/subway/lines/adoption/2.html
@@ -62,7 +62,7 @@
                <ul>
                   <li><a href="1.html">Who is elgible</a></li>
                   <li><a href="2.html" class="active">Expenses you can claim</a></li>
-                  <li><a href="3.html">Determine who claims the deduction</a></li>
+               <!--      <li><a href="3.html">Determine who claims the deduction</a></li> -->
                   <li><a href="4.html">How to claim</a></li>
                </ul>
             </nav>
@@ -91,7 +91,7 @@
 
 </ul>
  <h3 id="h-1-1">Expenses must occur within the adoption period</h3>
-<p>Eligible adoption expenses must be within the adoption period.</p>
+
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
   <li class="cnjnctn-col">Begins at the earliest of the following dates:<ul>
 <li>when an application is made for registration with a provincial or territorial ministry responsible for adoption, or with an adoption agency licensed by a provincial or territorial government</li>
@@ -125,7 +125,7 @@
             <nav class="gc-subway-pagination">
                <h2 class="wb-inv">Document navigation</h2>
                <ul class="pager">
-                  <li class="next"><a href="3.html" rel="next"><span class="wb-inv">Next: </span>Determine who claims the deduction</a></li>
+                  <li class="next"><a href="4.html" rel="next"><span class="wb-inv">Next: </span>How to claim</a></li>
                </ul>
             </nav>
             <div id="def-preFooter"></div>
