--- a/subway/lines/adoption/index.html
+++ b/subway/lines/adoption/index.html
@@ -70,8 +70,8 @@
                            <dd>Page description. Lorem ipsum dolor sit amet, consectetur adipiscing elit</dd>
                            <dt><a href="2.html">Expenses you can claim</a></dt>
                            <dd>Page description. Lorem ipsum dolor sit amet, consectetur adipiscing elit</dd>
-                           <dt><a href="3.html">Determine who claims the deduction</a></dt>
-                           <dd>Page description. Lorem ipsum dolor sit amet, consectetur adipiscing elit</dd>
+                          <!--    <dt><a href="3.html">Determine who claims the deduction</a></dt>
+                           <dd>Page description. Lorem ipsum dolor sit amet, consectetur adipiscing elit</dd> -->
                            <dt><a href="4.html">How to claim</a></dt>
                            <dd>Page description. Lorem ipsum dolor sit amet, consectetur adipiscing elit</dd>
                            
@@ -81,9 +81,8 @@
                     <aside class="gc-subway-support">
                         <h2 class="h4">Related</h2>
                         <ul class="list-unstyled">
-                           <li><a href="#">link</a></li>
-                           <li><a href="#">link</a></li>
-                           <li><a href="#">link</a></li>
+                           <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package.html">Get a T1 income tax package</a></li>
+                          
                         </ul>
                      </aside>
                   </div>
