--- a/subway/lines/adoption/3.html
+++ b/subway/lines/adoption/3.html
@@ -67,22 +67,9 @@
                </ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">Determine who claims the deduction</h1>
-            <p>Page content. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 class="h3">On this page</h2>
-            <ul>
-               <li><a href="#h-1">Heading A</a></li>
-               <li><a href="#h-2">Heading B</a></li>
-               <li><a href="#h-3">Heading C</a></li>
-               <li><a href="#h-4">Heading D</a></li>
-            </ul>
-            <h2 id="h-1">Heading A</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-2">Heading B</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-3">Heading C</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-4">Heading D</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
+            <p>Two adoptive parents can split the amount if the total combined claim for eligible expenses for each child is not more than the amount before the split.</p>
+			<p>Refer to: <a href="2.html#h-2">Maximum amount of expenses you can claim</a></p>
+			
             <nav class="gc-subway-pagination">
                <h2 class="wb-inv">Document navigation</h2>
                <ul class="pager">
