--- a/subway/lines/adoption/4.html
+++ b/subway/lines/adoption/4.html
@@ -62,27 +62,43 @@
                <ul>
                   <li><a href="1.html">Who is elgible</a></li>
                   <li><a href="2.html">Expenses you can claim</a></li>
-                  <li><a href="3.html">Determine who claims the deduction</a></li>
+               <!--   <li><a href="3.html">Determine who claims the deduction</a></li> -->
                   <li><a href="4.html" class="active">How to claim</a></li>
                </ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">How to claim</h1>
-            <p>Page content. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 class="h3">On this page</h2>
-            <ul>
-               <li><a href="#h-1">Heading A</a></li>
-               <li><a href="#h-2">Heading B</a></li>
-               <li><a href="#h-3">Heading C</a></li>
-               <li><a href="#h-4">Heading D</a></li>
-            </ul>
-            <h2 id="h-1">Heading A</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-2">Heading B</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-3">Heading C</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-4">Heading D</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
+            <h2>Steps</h2>
+			<ol class="lst-stps">
+			<li><h3>Calculate your allowable deduction</h3>
+			<p>Determine which <a href="2.html#h-1">expenses qualify to be claimed</a>, but do not exceed the <a href="2.html#h-2">maximum amount you can claim</a></p>
+			<details><summary>If parents are spliting the deduction</summary>
+			 <p> Two adoptive parents can split the amount if the total combined claim for eligible expenses for each child is not more than the amount before the split.</p></details></li>
+			<li><h3>Claim the deduction on your tax return</h3>
+			<ul class="list-unstyled cnjnctn-type-and cnjnctn-xs">
+  <li class="cnjnctn-col-60">
+    <h4 class="mrgn-tp-sm text-muted">Federal tax return</h4>
+    <p>Enter the deduction amount on line 31300 of your federal  tax return</p>
+  </li>
+  <li class="cnjnctn-col">
+    <h4 class="mrgn-tp-sm text-muted">Provincial or territorial tax return</h4>
+    <p>Claim the corresponding provincial or territorial non-refundable tax credit on line 58330 of your provincial or territorial Form 428, if, at the end of the year, you reside in: </p>
+	<ul class="list-unstyled">
+						<li> <img src="../flag-ab.jpg" alt=""> Alberta</li>
+						<li><img src="../flag-bc.jpg" alt=""> BC</li>
+						<li><img src="../flag-mn.jpg" alt=""> Manitoba</li>
+						<li><img src="../flag-nl.jpg" alt=""> Newfoundland and Labrador</li>
+						<li><img src="../flag-on.jpg" alt=""> Ontario</li>
+						<li><img src="../flag-yt.jpg" alt=""> Yukon</li>
+						
+						</ul>
+  </li>
+</ul>
+
+			</li>
+			<li><h3>Keep your supporting documents</h3>
+			<p>Do not send any supporting documents when you file your tax return. Keep them in case the CRA asks to see them later.</p></li>
+			
+			</ol>
 
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
