--- a/subway/lines/adoption/1.html
+++ b/subway/lines/adoption/1.html
@@ -78,19 +78,15 @@
 			
 						 <li class="checkbox">
                             <input type="checkbox" id="criteria-1" class="action-checkbox cb-dmm">
-                            <label for="criteria-1"><p>You have adopted a child</p>
+                            <label for="criteria-1"><p>You adopted a child</p>
 							 </label>
                         </li>
 						 <li class="checkbox">
                             <input type="checkbox" id="criteria-3" class="action-checkbox cb-dmm">
-                            <label for="criteria-3"><p>You have expenses related to the adoption</p>
+                            <label for="criteria-3"><p>You had expenses related to the adoption</p>
 							 </label>
                         </li>  
-							<li class="checkbox">
-                            <input type="checkbox" id="criteria-4" class="action-checkbox cb-dmm">
-                            <label for="criteria-4"><p>The adoption process has completed</p>
-							 </label>
-                        </li>  				
+										
 						   <li class="checkbox">
                             <input type="checkbox" id="criteria-2" class="action-checkbox cb-dmm">
                             <label for="criteria-2"><p>The adopted child is under 18 years of age at the time that the adoption order is issued or recognized by a government in Canada</p>
