--- a/subway/lines/adoption/2.html
+++ b/subway/lines/adoption/2.html
@@ -81,30 +81,37 @@
             <h2 id="h-1">Expenses that qualify</h2>
             <p>Eligible adoption expenses include:</p>
 <ul class="fa-ul">
-<li><span class="fas fa-check text-success fa-li"></span>fees paid to an adoption agency licensed by a provincial or territorial government</li>
-<li><span class="fas fa-check text-success fa-li"></span>court costs and legal and administrative expenses related to an adoption order for&nbsp;the child</li>
-<li><span class="fas fa-check text-success fa-li"></span>reasonable and necessary travel and living expenses of the child and the adoptive parents</li>
-<li><span class="fas fa-check text-success fa-li"></span>document translation fees</li>
-<li><span class="fas fa-check text-success fa-li"></span>mandatory fees paid to a foreign institution</li>
-<li><span class="fas fa-check text-success fa-li"></span>mandatory expenses paid&nbsp;for&nbsp;the child's immigration</li>
-<li><span class="fas fa-check text-success fa-li"></span>any other reasonable expenses related to the adoption required by a provincial or territorial government or an adoption agency licensed by a provincial or territorial government</li>
+<li><span class="fas fa-check text-success fa-li"></span>Fees paid to an adoption agency licensed by a provincial or territorial government</li>
+<li><span class="fas fa-check text-success fa-li"></span>Court costs and legal and administrative expenses related to an adoption order for&nbsp;the child</li>
+<li><span class="fas fa-check text-success fa-li"></span>Reasonable and necessary travel and living expenses of the child and the adoptive parents</li>
+<li><span class="fas fa-check text-success fa-li"></span>Document translation fees</li>
+<li><span class="fas fa-check text-success fa-li"></span>Mandatory fees paid to a foreign institution</li>
+<li><span class="fas fa-check text-success fa-li"></span>Mandatory expenses paid&nbsp;for&nbsp;the child's immigration</li>
+<li><span class="fas fa-check text-success fa-li"></span>Any other reasonable expenses related to the adoption required by a provincial or territorial government or an adoption agency licensed by a provincial or territorial government</li>
 
 </ul>
  <h3 id="h-1-1">Expenses must occur within the adoption period</h3>
+ <dl class="dl-horizontal">
+<dt  id="h-1-1-1"> Beginning of adoption period</dt><dd>
+<p>The adoption period begins at the <strong>earliest</strong> of the following dates:</p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+  <li class="cnjnctn-col"><span class="far fa-calendar-alt"></span> 
+When an application is made for registration with a provincial or territorial ministry responsible for adoption, or with an adoption agency licensed by a provincial or territorial government</li>
+<li class="cnjnctn-col"> <span class="far fa-calendar-alt"></span> When an application related to the adoption is made to a Canadian court</li>
+</ul>
+</dd>
+<dt id="h-1-1-2">End of adoption period</dt><dd>
+<p>The adoption period ends at the <strong>latest</strong> of the following dates:</p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col">
+<span class="far fa-calendar-alt"></span> When an adoption order is issued by, or recognized by, a government in Canada for that child</li>
+<li class="cnjnctn-col"><span class="far fa-calendar-alt"></span> When the child first begins to live permanently with you</li>
+</ul>
+</dd>
+</dl>
 
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-  <li class="cnjnctn-col">Begins at the earliest of the following dates:<ul>
-<li>when an application is made for registration with a provincial or territorial ministry responsible for adoption, or with an adoption agency licensed by a provincial or territorial government</li>
-<li>when an application related to the adoption is made to a Canadian court</li>
-</ul>
-</li>
-<li class="cnjnctn-col">Ends at the latest of the following dates:<ul>
-<li>when an adoption order is issued by, or recognized by, a government in Canada for that child</li>
-<li>when the child first begins to live permanently with you</li>
-</ul>
-</li>
-</ul>
             <h2 id="h-2">Maximum amount of expenses you can claim</h2>
+			<h3>2022 tax year</h3>
            	<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
   <li class="cnjnctn-col-60"><img src="../flag-ca.jpg" alt=""> <strong>Anyone</strong> can claim a maximum of $17,131 in adoption expenses, for each child,  on a <strong>federal</strong> tax return.</li>
 						<li class="cnjnctn-col">In addition, <strong>residents</strong> in certain provinces or territories can  claim the <strong>same expenses</strong> on a <strong>provincial or territorial</strong> tax return, to a <strong>maximum of</strong>:
@@ -120,7 +127,25 @@
 						</ul>
 						</li>
 						</ul>
-               
+						<h3>Prior years</h3>
+               <details><summary>2021 tax year</summary>
+			   <p>(Details here)</p>
+			   </details>
+			   <details><summary>2020 tax year</summary>
+			   <p>(Details here)</p>
+			   </details>
+			   <details><summary>2019 tax year</summary>
+			   <p>(Details here)</p>
+			   </details>
+			   <details><summary>2018 tax year</summary>
+			   <p>(Details here)</p>
+			   </details>
+			   <details><summary>2017 tax year</summary>
+			   <p>(Details here)</p>
+			   </details>
+			   <details><summary>2016 tax year</summary>
+			   <p>(Details here)</p>
+			   </details>
 
             <nav class="gc-subway-pagination">
                <h2 class="wb-inv">Document navigation</h2>
