--- a/subway/lines/adoption/index.html
+++ b/subway/lines/adoption/index.html
@@ -81,7 +81,7 @@
                     <aside class="gc-subway-support">
                         <h2 class="h4">Related</h2>
                         <ul class="list-unstyled">
-                           <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package.html">Get a T1 income tax package</a></li>
+                           <li><a href="https://www.canada.ca/en/services/taxes/income-tax/personal-income-tax/get-ready-taxes/ways.html">Ways to do your taxes</a></li>
                           
                         </ul>
                      </aside>
