--- a/subway/lines/adoption/4.html
+++ b/subway/lines/adoption/4.html
@@ -70,19 +70,21 @@
             <h2>Steps</h2>
 			<ol class="lst-stps">
 			<li><h3>Calculate your allowable deduction</h3>
-			<p>Determine which <a href="2.html#h-1">expenses qualify to be claimed</a>, but do not exceed the <a href="2.html#h-2">maximum amount you can claim</a></p>
+			<p>Determine which <a href="2.html#h-1">expenses qualify to be claimed</a>. Do not exceed the <a href="2.html#h-2">maximum amount you can claim</a>.</p>
 			<details><summary>If parents are spliting the deduction</summary>
 			 <p> Two adoptive parents can split the amount if the total combined claim for eligible expenses for each child is not more than the amount before the split.</p></details></li>
 			<li><h3>Claim the deduction on your tax return</h3>
+			<p>You can only claim adoption expenses in the tax year that the <a href="2.html#h-1-1-2">adoption period ends</a>, even if the adoption took more than one year.</p>
 			<ul class="list-unstyled cnjnctn-type-and cnjnctn-xs">
   <li class="cnjnctn-col-60">
     <h4 class="mrgn-tp-sm text-muted">Federal tax return</h4>
-    <p>Enter the deduction amount on line 31300 of your federal  tax return</p>
+    <p>Claim on line 31300 of your federal  tax return</p>
+	<p>Anyone who is <a href="1.html#h-1">eligible</a>, can claim the expenses on the federal tax return.</p>
   </li>
   <li class="cnjnctn-col">
     <h4 class="mrgn-tp-sm text-muted">Provincial or territorial tax return</h4>
-    <p>Claim the corresponding provincial or territorial non-refundable tax credit on line 58330 of your provincial or territorial Form 428, if, at the end of the year, you reside in: </p>
-	<ul class="list-unstyled">
+    <p>Claim on line 58330 of your provincial or territorial Form 428, if, at the end of the year, you reside in: </p>
+	<ul class="list-unstyled mrgn-bttm-md">
 						<li> <img src="../flag-ab.jpg" alt=""> Alberta</li>
 						<li><img src="../flag-bc.jpg" alt=""> BC</li>
 						<li><img src="../flag-mn.jpg" alt=""> Manitoba</li>
@@ -91,6 +93,8 @@
 						<li><img src="../flag-yt.jpg" alt=""> Yukon</li>
 						
 						</ul>
+						<p>Having an income from a source in the above provinces or territory is not enough to qualify.  You must be a resident of that province or territory at the end of the tax year you are making your claim.</p>
+						
   </li>
 </ul>
 
