--- a/subway/lines/adoption/4.html
+++ b/subway/lines/adoption/4.html
@@ -75,7 +75,7 @@
 			 <p> Two adoptive parents can split the amount if the total combined claim for eligible expenses for each child is not more than the amount before the split.</p></details></li>
 			<li><h3>Claim the deduction on your tax return</h3>
 			<p>You can only claim adoption expenses in the tax year that the <a href="2.html#h-1-1-2">adoption period ends</a>, even if the adoption took more than one year.</p>
-			<ul class="list-unstyled cnjnctn-type-and cnjnctn-xs">
+			<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm mrgn-tp-lg">
   <li class="cnjnctn-col-60">
     <h4 class="mrgn-tp-sm text-muted">Federal tax return</h4>
     <p>Claim on line 31300 of your federal  tax return</p>
