--- a/subway/lines/adoption/4.html
+++ b/subway/lines/adoption/4.html
@@ -83,7 +83,7 @@
   </li>
   <li class="cnjnctn-col">
     <h4 class="mrgn-tp-sm text-muted">Provincial or territorial tax return</h4>
-    <p>Claim on line 58330 of your provincial or territorial Form 428, if, at the end of the year, you reside in: </p>
+    <p>Also, claim on line 58330 of your provincial or territorial Form 428, if, at the end of the year, you reside in: </p>
 	<ul class="list-unstyled mrgn-bttm-md">
 						<li> <img src="../flag-ab.jpg" alt=""> Alberta</li>
 						<li><img src="../flag-bc.jpg" alt=""> BC</li>
