--- a/subway/lines/adoption/4.html
+++ b/subway/lines/adoption/4.html
@@ -44,8 +44,17 @@
                 title: "Taxes",
                 href: "https://www.canada.ca/en/services/taxes.html"
               },{
-                title: "Tax credits and benefits for individuals",
-                href: "https://www.canada.ca/en/services/taxes/child-and-family-benefits.html"
+                title: "Income tax",
+                href: "https://www.canada.ca/en/services/taxes/income-tax.html"
+              },{
+                title: "Personal income tax",
+                href: "https://www.canada.ca/en/services/taxes/income-tax/personal-income-tax.html"
+              },{
+                title: "Get ready to do your taxes",
+                href: "https://www.canada.ca/en/services/taxes/income-tax/personal-income-tax/get-ready-taxes.html"
+              },{
+                title: "Claiming deductions, credits, and expenses",
+                href: "https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/deductions-credits-expenses.html"
               },{
                 title: "Adoption expenses - Lines 31300 and 58330",
                 href: "index.html"
@@ -55,7 +64,7 @@
               siteMenu: true,
               showPreContent: true
             });
-         </script>
+         </script> 
          <main role="main" property="mainContentOfPage" class="container">
             <nav class="gc-subway provisional">
                <h1>Adoption expenses - Lines 31300 and 58330</h1>
