part 2- value res prop

--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -898,18 +898,34 @@ margin-left: 38px;
 	<p>You must determine your ownership percentage, as well as the value of the residential property.</p>
 	<details>
 <summary>Determine your ownership percentage</summary>
-	<p>If you are the only owner of the residential property, your ownership percentage is 100%</p>
+	<p>If you are the only owner of the residential property, your ownership percentage is 100%.</p>
 	<p>If you are one of several owners of the residential property, your ownership percentage is either of the following:</p> 
 <ul>
-	<li>the percentage of your ownership as indicated in the land registration system</li>
+	<li>The percentage of your ownership as indicated in the land registration system</li>
 	<li>100% divided by the number of owners, if no percentage is indicated in the land registration system</li>
 </ul>
 	</details>
 	<details>
 	<summary>Determine the value of the residential property</summary>
       
-	<p>There are two ways to determine the value of a residential property. The general rule is to use its taxable value. If you want to use its <mark>fair market value</mark> instead, you must file an election with the Agency.</p>
-       [Determine <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091881">taxable value</a>] </p>
+	<p>There are two ways to determine the value of a residential property.</p> 
+		<p>The general rule is to use its taxable value.</p>
+
+<details>
+<summary>What is taxable value</summary>
+	<p>The taxable value of the residential property for a calendar year is the <strong>greater</strong> of the following amounts:</p>
+	<ul><li>The value of the residential property determined by an authority who establishes the assessed value of property, for property tax purposes</li></ul>
+	<ul><li>The residential property's most recent sale price, on or before December 31 of the calendar year</li></ul>
+
+	<p>For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091881">Calculating the tax payable using the taxable value</a></p>
+
+
+</details>
+
+
+		
+		<p>If you want to use the residential property's fair market value instead, you must file a <a href="#FMV-election">Fair market value (FMV) election</a>.</p>
+
 
 
 	</details>
@@ -983,7 +999,7 @@ margin-left: 38px;
 
 
 	
-	<li><h3>Part 7 - Fair market value (FMV) election</h3>
+	<li><h3 id="FMV-election">Part 7 - Fair market value (FMV) election</h3>
 		<p>If you choose to make a FMV election for a particular residential property, you are electing to use the FMV of your property, instead of its <mark>taxable value</mark>.</p> 
 		<details>
 			<summary>Fair market value</summary>
