--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -912,19 +912,19 @@ margin-left: 38px;
 		<p>The general rule is to use its taxable value.</p>
 
 <details>
-<summary>What is taxable value</summary>
+<summary id="taxable-value">What is taxable value</summary>
 	<p>The taxable value of the residential property for a calendar year is the <strong>greater</strong> of the following amounts:</p>
 	<ul><li>The value of the residential property determined by an authority who establishes the assessed value of property, for property tax purposes</li></ul>
 	<ul><li>The residential property's most recent sale price, on or before December 31 of the calendar year</li></ul>
 
-	<p>For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091881">Calculating the tax payable using the taxable value</a></p>
+	<p class="mrgn-tp-md">For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091881">Calculating the tax payable using the taxable value</a></p>
 
 
 </details>
 
 
 		
-		<p>If you want to use the residential property's fair market value instead, you must file a <a href="#FMV-election">Fair market value (FMV) election</a>.</p>
+		<p class="mrgn-tp-md">If you want to use the residential property's fair market value instead, you must file a <a href="#FMV-election">Fair market value (FMV) election</a>.</p>
 
 
 
@@ -1000,7 +1000,7 @@ margin-left: 38px;
 
 	
 	<li><h3 id="FMV-election">Part 7 - Fair market value (FMV) election</h3>
-		<p>If you choose to make a FMV election for a particular residential property, you are electing to use the FMV of your property, instead of its <mark>taxable value</mark>.</p> 
+		<p>If you choose to make a FMV election for a particular residential property, you are electing to use the FMV of your property, instead of its <a href="#taxable-value">taxable value</a>.</p> 
 		<details>
 			<summary>Fair market value</summary>
 <p>To calculate the tax you owe using the fair market value of a residential property, you must file an election by completing the section.</p>
