--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -914,7 +914,7 @@ margin-left: 38px;
 <details>
 <summary id="taxable-value">What is taxable value</summary>
 	<p>The taxable value of the residential property for a calendar year is the <strong>greater</strong> of the following amounts:</p>
-	<ul><li>The value of the residential property determined by an authority who establishes the assessed value of property, for property tax purposes</li></ul>
+	<ul><li>The value of the residential property determined by an authority who establishes the assessed value of property for property tax purposes</li></ul>
 	<ul><li>The residential property's most recent sale price, on or before December 31 of the calendar year</li></ul>
 
 	<p class="mrgn-tp-md">For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091881">Calculating the tax payable using the taxable value</a></p>
@@ -943,20 +943,28 @@ margin-left: 38px;
 		
 		<details>
 			<summary>Section 2 – Election to designate a residential property</summary>
-			<p>Yes to line 300</p>
-			<p>No to line 310</p>
-			<p>Select either yes or no: Electing that you as the owner, designate the residential property (completed in part 2) as either a primary place of residence or for qualifying occupancy.</p>
-			<p>You must fill out this section to be eligible for one of these exemptions.</p>
+				<p>Complete this section if you answered <strong>yes</strong> for line 300, and <strong>no</strong> for line 310.</p>
+			<p>Line 315: By answering yes, you are electing that you as the owner, designate the residential property (completed in part 2) as either a primary place of residence or for qualifying occupancy.</p>
+<p>You <strong>must</strong> fill out this section to be eligible for one of these 2 exemptions.</p>
 		</details>
 
 
 		<details>
 			<summary>Section 3 – Joint election to designate a residential property</summary>
-			<p>Yes to line 300</p>
-			<p>Select yes or no: Electing that both you and your spouse or common-law partners, as the owners, designate the residential property (completed in part 2) as either a primary place of residence or for qualifying occupancy.</p>
-			<p>You must fill out this section to be eligible for one of these exemptions.</p>
-			<p> To constitute a valid joint election, your spouse or common-law partner must elect to designate the same residential property for the calendar year in an UHT return for a residential property they own. The election is incomplete until the CRA receives your spouse or common-law partner's portion of the election on their UHT return designating the same residential property</p>
+		<p>Complete this section if you answered <strong>yes</strong> for line 310.</p>
+			<p>Line 320: By answering yes, you are electing that both you and your spouse or common-law partner, as the owners, designate the residential property (completed in part 2) as either a primary place of residence or for qualifying occupancy.</p>
+<p>You <strong>must</strong> fill out this section to be eligible for one of these 2 exemptions.</p>
+
+			
+			
+			
+			
+		<p> To constitute a valid joint election, your spouse or common-law partner must elect to designate the <strong>same</strong> residential property for the calendar year in an UHT return for a residential property they own.</p>
+			<p></p>The election is incomplete until the CRA receives your spouse or common-law partner's portion of the election on their UHT return designating the <strong>same</strong> residential property.</p>
 		</details>
+
+
+		
 		<p class="mrgn-tp-md">If you choose to make an election, you may only designate one residential property.</p>
 		<p>You cannot elect to designate different residential properties to claim multiple exemptions based on your, or your spouse's or common-law partner's, personal occupancy of the properties.</p>
 </li>
