--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -937,7 +937,7 @@ margin-left: 38px;
 <p>This part only applies to <strong>individuals</strong> who are <strong>not</strong> Canadian citizens or permanent residents, and who own more than one residential property.</p>
 		<details>
 			<summary>Section 1 - Multiple properties</summary>
-			<p>If you own more than one residential property in Canada on December 31, you must file a separate return for each property.</p>
+			<p>If you own more than one residential property in Canada on December 31, you <strong>must</strong> file a separate return for each property.</p>
 		</details>
 		
 		
