--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -933,7 +933,7 @@ margin-left: 38px;
 </li>
 
 	
-	<li><h3>Part 3 - Multiple residential properties</h3>
+	<li><h3 id="part-3">Part 3 - Multiple residential properties</h3>
 <p>This part only applies to <strong>individuals</strong> who are <strong>not</strong> Canadian citizens or permanent residents, and who own more than one residential property.</p>
 		<details>
 			<summary>Section 1 - Multiple properties</summary>
@@ -979,18 +979,18 @@ margin-left: 38px;
 	
 	<li><h3>Part 4 - Exemption for primary place of residence</h3>
 		<p>Only owners who are <strong>individuals</strong> may qualify for this exemption.</p>
-		<p>To be eligible for this exemption, you must file the election in Part 3, Section 2 or 3.</p>
+		<p>To be eligible for this exemption, you must file the election in <a href=#part-3">Part 3</a>, Section 2 or 3.</p>
 		<details>
 			<summary>Primary place of residence</summary>
 			<p>This part applies to situations where a dwelling unit that is part of the residential property is occupied by an owner or certain members of the owner's family.</p>
-
+<p>For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423684">What is a primary place of residence</a>. </p>
 	</details>	
 </li>
 
 
 	
 	<li><h3>Part 5 - Exemption for qualifying occupancy</h3>
-		<p>To be eligible for this exemption, you must file the election in Part 3, Section 2 or 3.</p>
+		<p>To be eligible for this exemption, you must file the election in <a href=#part-3">Part 3</a>, Section 2 or 3.</p>
 		<details>
 			
 			<summary>Qualifying occupancy</summary>
