--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -994,8 +994,12 @@ margin-left: 38px;
 		<details>
 			
 			<summary>Qualifying occupancy</summary>
-			<p>This part applies in situations where your ownership of a residential property has one or more qualifying occupancy periods totalling at least 180 days in the calendar year. When calculating the total days of qualifying occupancy periods in the calendar year, do not include periods of continuous occupancy that are less than a month. Any common days of overlapping qualifying occupancy periods are only counted once.</p>
-
+			<p>This part applies to situations where your ownership of a residential property has <strong>one or more</strong> qualifying occupancy periods totalling at least <strong>180 days</strong> in the calendar year.</p>
+			<p>A qualifying occupancy period is at least 1 month in a calendar year where certain individuals (qualifying occupants) have continuous occupancy. Qualifying occupancy periods can be longer than 1 month, but not shorter than 1 month. </p>
+			
+			<p>For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423684">What is a qualifying occupancy period</a>.</p>
+			
+			
 	</details>
 		
 </li>
